# personalblockchain

./: .gitignore  CMakeLists.txt  Dockerfile  GUIDE.md  NETWORK_SCALING_UPGRADE.md  PROJECT_STATUS.md  README.md  STABILIZATION_AUDIT_2026-03-14.md  WALLET_SYSTEM_UPGRADE.md  analyse.md  config.json  docker-compose.yml
blockchain-explorer/: .env.example  README.md  index.html  package-lock.json  package.json
blockchain-explorer/src/: App.jsx  index.css
blockchain-explorer/src/components/: BalanceCard.jsx  BlockCard.jsx  BlockModal.jsx  BlockTable.jsx  ExplorerLayout.jsx  Header.jsx  MiningPanel.jsx  Navbar.jsx  NetworkGraph.jsx  ReceivePanel.jsx  SendForm.jsx  Sidebar.jsx  StatsCard.jsx  TransactionDetailModal.jsx  TransactionForm.jsx  TransactionTable.jsx  WalletCard.jsx  WalletCreatedModal.jsx
blockchain-explorer/src/pages/: Assets.jsx  Blocks.jsx  Dashboard.jsx  Login.jsx  Profile.jsx  Send.jsx  Settings.jsx  Transactions.jsx  WalletDashboard.jsx
blockchain-explorer/src/router/: AppRoutes.jsx
blockchain-explorer/src/services/: api.js  clipboard.js  explorerData.js  validation.js  walletCrypto.js
blockchain-explorer/src/store/: useNetworkStore.js  useWalletStore.js
include/block/: block.h
include/consensus/: consensus_engine.h  difficulty_adjuster.h  pos_engine.h  pow_engine.h
include/core/: blockchain.h
include/crypto/: ecdsa.h  sha256.h
include/network/: bootstrap_manager.h  connection_manager.h  http_server.h  message.h  network_metrics.h  node.h  node_identity.h  peer.h  peer_manager.h  peer_scorer.h
include/state/: state_manager.h
include/storage/: leveldb_manager.h
include/transaction/: transaction.h
include/wallet/: wallet.h  wallet_manager.h
src/: main.cpp
src/block/: block.cpp
src/consensus/: difficulty_adjuster.cpp
src/core/: blockchain.cpp
src/crypto/: ecdsa.cpp  sha256.cpp
src/network/: bootstrap_manager.cpp  connection_manager.cpp  http_server.cpp  message.cpp  network_metrics.cpp  node.cpp  node_identity.cpp  peer.cpp  peer_manager.cpp  peer_scorer.cpp
src/state/: state_manager.cpp
src/storage/: leveldb_manager.cpp
src/transaction/: transaction.cpp
src/wallet/: wallet.cpp  wallet_manager.cpp
tests/: wallet_system_tests.cpp
